k8s/calibre/calibre-web/deployment.yml
 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
  labels:
    app: calibre-web
    version: latest
    type: third-party
    facing: internal
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: calibre-web
  template:
    metadata:
      labels:
        app: calibre-web
    spec:
      containers:
        - name: calibre-web
          image: linuxserver/calibre-web:latest
          ports:
            - name: "http-port"
              containerPort: 8083
              protocol: TCP
          volumeMounts:
            - name: pv-config-calibre-web
              mountPath: /config
            - name: books
              mountPath: /books
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '1000m'
      volumes:
        - name: books
          nfs:
            # Use real NFS server address here.
            server: 192.168.1.240
            # Use real NFS server export directory.
            path: "/rpool/media/BooksBase/Calibre Library"
            readOnly: false
        - name: pv-config-calibre-web
          persistentVolumeClaim:
            claimName: pv-config-calibre-web
