k8s/calibre/calibre-web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  labels:
    app: calibre-web
spec:
  selector:
    app: calibre-web
  ports:
    - name: "http-port"
      protocol: TCP
      targetPort: 8083
      port: 80
