k8s/calibre/calibre-web/ingress-subdir.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: calibre
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Script-Name /calibre;
spec:
  rules:
  - http:
      paths:
      - path: /calibre
        pathType: Prefix
        backend:
          serviceName: calibre
          servicePort: 80
