k8s/calibre/calibre-web/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: calibre-web
spec:
  rules:
  - host: calibre.server.lemira
    http:
      paths:
      - path: /
        backend:
          serviceName: calibre-web
          servicePort: 80
